@@ -1,4 +1,5 @@
 Serf ... []
+  Support LTFLAGS override as a config-time env. variable (Issue 44)
   Fix CUTest test harness compilation on Solaris (Issue 43)
   Fix small race condition in OpenSSL initialization (Issue 39)
   Handle content streams larger than 4GB on 32-bit OSes (Issue 41)
